--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "dev": "bun run --filter @vets-dev/server dev",
     "build": "bun run --filter '*' build",
     "test": "bun test",
+    "test:unit": "bun test packages/",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "bun test && playwright test",
     "tsc": "tsc --noEmit",
-    "test:e2e": "bun run --filter @vets-dev/server test:e2e",
     "db:generate": "bun run --filter @vets-dev/shared db:generate",
     "db:migrate": "bun run --filter @vets-dev/shared db:migrate",
     "db:studio": "bun run --filter @vets-dev/shared db:studio",
@@ -19,7 +24,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
+    "@playwright/test": "^1.57.0",
     "@types/bun": "^1.1.14",
+    "msw": "^2.12.7",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.7.2"
   }
 }
