--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "dev": "bun run --filter @vets-dev/server dev",
     "build": "bun run --filter '*' build",
-    "test": "bun test",
-    "test:unit": "bun test packages/",
+    "test": "bun test ./packages/",
+    "test:unit": "bun test ./packages/",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
-    "test:all": "bun test && playwright test",
+    "test:all": "bun test ./packages/ && playwright test",
     "tsc": "tsc --noEmit",
     "db:generate": "bun run --filter @vets-dev/shared db:generate",
     "db:migrate": "bun run --filter @vets-dev/shared db:migrate",
