--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,17 +10,14 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "build:css": "bunx tailwindcss -i ./src/styles/main.css -o ./static/css/main.css --minify",
-    "build:css:watch": "bunx tailwindcss -i ./src/styles/main.css -o ./static/css/main.css --watch",
+    "build:css": "tailwindcss -i ./src/styles/main.css -o ./static/css/main.css --minify",
+    "build:css:watch": "tailwindcss -i ./src/styles/main.css -o ./static/css/main.css --watch",
     "build": "bun run build:css"
   },
   "dependencies": {
     "@starfederation/datastar": "^1.0.0-beta.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "3",
     "typescript": "^5.7.2"
   }
 }
