--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,10 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 gp
 .claude/data
+
+# Python bytecode cache
+__pycache__/
+*.pyc
+
+# Effect reference repository
+.reference/
