--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "format": "biome format --write ."
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.1",
     "@biomejs/biome": "^2.3.11",
     "@effect/language-service": "^0.72.0",
     "@playwright/test": "^1.57.0",
