--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -111,7 +111,7 @@ jobs:
   pr-checks:
     name: PR Checks Complete
     runs-on: ubuntu-latest
-    needs: [unit-tests, e2e-tests]
+    needs: [lint, unit-tests, e2e-tests]
     if: always()
     steps:
       - name: Check results
